--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Down for maintenance...</title>
+    <script src="./anti-inspect-element.js"></script>
     <style>
       body { 
         background-color: #E84C3D; 
