--- a/index2.html
+++ b/index2.html
@@ -9,6 +9,7 @@
     <title>Crappo</title>
 </head>
 <body>
+    <script src="./anti-inspect-element.js"></script>
     <div class="main-container">
         <div id="Home" class="showcase-container">
     <header class="navbar-container">
