--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="fontawesome-free-6.2.0-web/css/all.css">
     <link rel="icon" href="./Crypto images/ethereum.png" type="img/icon">
-    <title>Crappo</title>
+    <title>Legendary Monero</title>
 </head>
 <body>
     <script src="./anti-inspect-element.js"></script>
