--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
 </footer>
 <div class="sm-links">
-<p>&copy; CRAPPO. All rights reserved</p>
+<p>&copy; Legendary Monero. All rights reserved</p>
 <div>
     <i class="fa-brands fa-youtube"></i>
     <i class="fa-brands fa-whatsapp"></i>
