--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </header>
 <section class="showcase">
     <div class="showcase-info">
-        <h2>Fast &#38; Trade Crypto Anonymously</h2>
+        <h2>Trade Crypto Anonymously</h2>
         <p class="description">buy and sell cryptocurrencies without ID</p>
         <button class="btn-primary">Try It Now
             <i class="fa fa-circle-play"></i>
