--- a/index.html
+++ b/index.html
@@ -19,12 +19,7 @@
 <nav class="navbar">
     <ul class="mainmenu">
         <div class="main-menu">
-        <li><a href="#">Products</a></li>
-        <li><a href="#">Features</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
-        <div class="menu-side">
-            <li><a href="#">Login</a></li>
+        <li><a href="#">Discord</a></li>
             <span class="line"></span>
         <li><a href="#" class="menu-btn">Register</a></li>
         </div>
