--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="main-menu">
         <li><a href="#">Discord</a></li>
             <span class="line"></span>
-        <li><a href="#" class="menu-btn">Register</a></li>
+        <li><a href="#" class="menu-btn">Coming Soon</a></li>
         </div>
         <div class="closemenu"><i class="fa fa-times"></i></div>
         </div>
