--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
             <span class="line"></span>
         <li><a href="#" class="menu-btn">Coming Soon</a></li>
         </div>
+        <li><a href="#" class="menu-btn">Coming Soon</a></li>
+        <li><a href="#" class="menu-btn">Coming Soon</a></li>
+        </div>
+        <li><a href="#" class="menu-btn">Coming Soon</a></li>
         <div class="closemenu"><i class="fa fa-times"></i></div>
         </div>
     </ul>
